--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,7 @@
 {
-  "presets": ["env"],
+  "presets": ["env", "es2015", "react"],
   "plugins": [
     "transform-object-rest-spread",
     "transform-react-jsx"
   ]
 }
-
