--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "columns"
   ],
   "author": "Ali Al-Sheiba <ali.alsheiba@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ali-sheiba/react-remote-sortable-columns.git"
+  },
   "license": "MIT"
 }
