--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-remote-sortable-columns",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Sort table columns by calling restful apis",
   "main": "build/index.js",
   "dependencies": {
     "classnames": "^2.2.5",
+    "npm": "^5.7.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "webpack": "^3.10.0"
